// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for open: false, fullscreen: false, dismissButton: false, hasHeader: true, hasFooter: false and theme: light 1`] = `
":host {
  overflow-y: auto;
  color-scheme: light dark !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  visibility: hidden !important;
  pointer-events: none !important;
  -webkit-backdrop-filter: blur(0px) !important;
  backdrop-filter: blur(0px) !important;
  background: none !important;
  transition: background var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0.6s) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 8px 8px 0 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 0 8px 8px !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.scroll-container {
  display: flex;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  overflow-y: inherit;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}
.root {
  color: #010205;
  position: relative;
  box-sizing: border-box;
  transform: translateY(25%);
  opacity: 0;
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1);
  padding-top: 32px;
  padding-bottom: 32px;
  background: #FFF;
  outline: 0;
  min-width: 276px;
  max-width: 1535.5px;
  min-height: auto;
  margin: clamp(16px, 7vh, 192px) max(22px, 10.625vw - 12px);
  border-radius: 8px;
}
.root:focus::after {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 12px;
  border-color: #FBFCFF;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.header {
  padding: 0 32px 8px;
}
.content {
  padding: 0 32px;
}
@media(min-width:1760px) {
  .root {
    margin: min(192px, 10vh) max(22px, 10.625vw - 12px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: false, fullscreen: false, dismissButton: true, hasHeader: false, hasFooter: false and theme: light 1`] = `
":host {
  overflow-y: auto;
  color-scheme: light dark !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  visibility: hidden !important;
  pointer-events: none !important;
  -webkit-backdrop-filter: blur(0px) !important;
  backdrop-filter: blur(0px) !important;
  background: none !important;
  transition: background var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0.6s) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-top: -2rem !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 8px 8px 0 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 0 8px 8px !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.scroll-container {
  display: flex;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  overflow-y: inherit;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}
.root {
  color: #010205;
  position: relative;
  box-sizing: border-box;
  transform: translateY(25%);
  opacity: 0;
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1);
  padding-top: 2rem;
  padding-bottom: 32px;
  background: #FFF;
  outline: 0;
  min-width: 276px;
  max-width: 1535.5px;
  min-height: auto;
  margin: clamp(16px, 7vh, 192px) max(22px, 10.625vw - 12px);
  border-radius: 8px;
}
.root:focus::after {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 12px;
  border-color: #FBFCFF;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.content {
  padding: 0 32px;
}
.controls {
  position: absolute;
  top: 8px;
  right: 8px;
  left: 8px;
  display: flex;
  justify-content: flex-end;
  z-index: 1;
}
.dismiss {
  border: 2px solid #FFF;
  border-radius: 4px;
  background: #FFF;
}
@media(min-width:1760px) {
  .root {
    margin: min(192px, 10vh) max(22px, 10.625vw - 12px);
  }
}

@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: false, fullscreen: false, dismissButton: true, hasHeader: true, hasFooter: false and theme: dark 1`] = `
":host {
  overflow-y: auto;
  color-scheme: light dark !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  visibility: hidden !important;
  pointer-events: none !important;
  -webkit-backdrop-filter: blur(0px) !important;
  backdrop-filter: blur(0px) !important;
  background: none !important;
  transition: background var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0.6s) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 8px 8px 0 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 0 8px 8px !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
.scroll-container {
  display: flex;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  overflow-y: inherit;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}
.root {
  color: #FBFCFF;
  position: relative;
  box-sizing: border-box;
  transform: translateY(25%);
  opacity: 0;
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1);
  padding-top: 2rem;
  padding-bottom: 32px;
  background: #0E0E12;
  outline: 0;
  min-width: 276px;
  max-width: 1535.5px;
  min-height: auto;
  margin: clamp(16px, 7vh, 192px) max(22px, 10.625vw - 12px);
  border-radius: 8px;
}
.root:focus::after {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 12px;
  border-color: #FBFCFF;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.header {
  padding: 0 32px 8px;
}
.content {
  padding: 0 32px;
}
.controls {
  position: absolute;
  top: 8px;
  right: 8px;
  left: 8px;
  display: flex;
  justify-content: flex-end;
  z-index: 1;
}
.dismiss {
  border: 2px solid #0E0E12;
  border-radius: 4px;
  background: #0E0E12;
}
@media(min-width:1760px) {
  .root {
    margin: min(192px, 10vh) max(22px, 10.625vw - 12px);
  }
}

@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: false, fullscreen: true, dismissButton: false, hasHeader: false, hasFooter: false and theme: light 1`] = `
":host {
  overflow-y: auto;
  color-scheme: light dark !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  visibility: hidden !important;
  pointer-events: none !important;
  -webkit-backdrop-filter: blur(0px) !important;
  backdrop-filter: blur(0px) !important;
  background: none !important;
  transition: background var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0.6s) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-top: -32px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.scroll-container {
  display: flex;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  overflow-y: inherit;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}
.root {
  color: #010205;
  position: relative;
  box-sizing: border-box;
  transform: translateY(25%);
  opacity: 0;
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1);
  padding-top: 32px;
  padding-bottom: 32px;
  background: #FFF;
  outline: 0;
  min-width: 100%;
  max-width: none;
  min-height: 100%;
  margin: 0;
  border-radius: 0;
}
.root:focus::after {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 0;
  border-color: #010205;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.content {
  padding: 0 32px;
}
@media(min-width:1760px) {
  .root {
    margin: 0;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: false, fullscreen: true, dismissButton: false, hasHeader: true, hasFooter: false and theme: dark 1`] = `
":host {
  overflow-y: auto;
  color-scheme: light dark !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  visibility: hidden !important;
  pointer-events: none !important;
  -webkit-backdrop-filter: blur(0px) !important;
  backdrop-filter: blur(0px) !important;
  background: none !important;
  transition: background var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0.6s) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
.scroll-container {
  display: flex;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  overflow-y: inherit;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}
.root {
  color: #FBFCFF;
  position: relative;
  box-sizing: border-box;
  transform: translateY(25%);
  opacity: 0;
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1);
  padding-top: 32px;
  padding-bottom: 32px;
  background: #0E0E12;
  outline: 0;
  min-width: 100%;
  max-width: none;
  min-height: 100%;
  margin: 0;
  border-radius: 0;
}
.root:focus::after {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 0;
  border-color: #FBFCFF;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.header {
  padding: 0 32px 8px;
}
.content {
  padding: 0 32px;
}
@media(min-width:1760px) {
  .root {
    margin: 0;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: false, fullscreen: true, dismissButton: true, hasHeader: false, hasFooter: false and theme: dark 1`] = `
":host {
  overflow-y: auto;
  color-scheme: light dark !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  visibility: hidden !important;
  pointer-events: none !important;
  -webkit-backdrop-filter: blur(0px) !important;
  backdrop-filter: blur(0px) !important;
  background: none !important;
  transition: background var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0.6s) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-top: -2rem !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
.scroll-container {
  display: flex;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  overflow-y: inherit;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}
.root {
  color: #FBFCFF;
  position: relative;
  box-sizing: border-box;
  transform: translateY(25%);
  opacity: 0;
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1);
  padding-top: 2rem;
  padding-bottom: 32px;
  background: #0E0E12;
  outline: 0;
  min-width: 100%;
  max-width: none;
  min-height: 100%;
  margin: 0;
  border-radius: 0;
}
.root:focus::after {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 0;
  border-color: #FBFCFF;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.content {
  padding: 0 32px;
}
.controls {
  position: absolute;
  top: 8px;
  right: 8px;
  left: 8px;
  display: flex;
  justify-content: flex-end;
  z-index: 1;
}
.dismiss {
  border: 2px solid #0E0E12;
  border-radius: 4px;
  background: #0E0E12;
}
@media(min-width:1760px) {
  .root {
    margin: 0;
  }
}

@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: false, fullscreen: true, dismissButton: true, hasHeader: true, hasFooter: false and theme: light 1`] = `
":host {
  overflow-y: auto;
  color-scheme: light dark !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  visibility: hidden !important;
  pointer-events: none !important;
  -webkit-backdrop-filter: blur(0px) !important;
  backdrop-filter: blur(0px) !important;
  background: none !important;
  transition: background var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0.6s) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.scroll-container {
  display: flex;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  overflow-y: inherit;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}
.root {
  color: #010205;
  position: relative;
  box-sizing: border-box;
  transform: translateY(25%);
  opacity: 0;
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1);
  padding-top: 2rem;
  padding-bottom: 32px;
  background: #FFF;
  outline: 0;
  min-width: 100%;
  max-width: none;
  min-height: 100%;
  margin: 0;
  border-radius: 0;
}
.root:focus::after {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 0;
  border-color: #010205;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.header {
  padding: 0 32px 8px;
}
.content {
  padding: 0 32px;
}
.controls {
  position: absolute;
  top: 8px;
  right: 8px;
  left: 8px;
  display: flex;
  justify-content: flex-end;
  z-index: 1;
}
.dismiss {
  border: 2px solid #FFF;
  border-radius: 4px;
  background: #FFF;
}
@media(min-width:1760px) {
  .root {
    margin: 0;
  }
}

@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: true, fullscreen: { base: true, xs: false, s: true, m: false, l: true, xl: false }, dismissButton: true, hasHeader: false, hasFooter: false and theme: light 1`] = `
":host {
  overflow-y: auto;
  color-scheme: light dark !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  visibility: inherit !important;
  pointer-events: auto !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  background: rgba(1, 2, 5, 0.67) !important;
  transition: background var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0s) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-top: -2rem !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
@media(min-width:480px) {
  ::slotted(.stretch-to-full-modal-width:first-child) {
    border-radius: 8px 8px 0 0 !important;
  }
  ::slotted(.stretch-to-full-modal-width:last-child) {
    border-radius: 0 0 8px 8px !important;
  }
}

@media(min-width:760px) {
  ::slotted(.stretch-to-full-modal-width:first-child) {
    border-radius: 0 !important;
  }
  ::slotted(.stretch-to-full-modal-width:last-child) {
    border-radius: 0 !important;
  }
}

@media(min-width:1000px) {
  ::slotted(.stretch-to-full-modal-width:first-child) {
    border-radius: 8px 8px 0 0 !important;
  }
  ::slotted(.stretch-to-full-modal-width:last-child) {
    border-radius: 0 0 8px 8px !important;
  }
}

@media(min-width:1300px) {
  ::slotted(.stretch-to-full-modal-width:first-child) {
    border-radius: 0 !important;
  }
  ::slotted(.stretch-to-full-modal-width:last-child) {
    border-radius: 0 !important;
  }
}

@media(min-width:1760px) {
  ::slotted(.stretch-to-full-modal-width:first-child) {
    border-radius: 8px 8px 0 0 !important;
  }
  ::slotted(.stretch-to-full-modal-width:last-child) {
    border-radius: 0 0 8px 8px !important;
  }
}

.scroll-container {
  display: flex;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  overflow-y: inherit;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}
.root {
  color: #010205;
  position: relative;
  box-sizing: border-box;
  transform: translateY(0%);
  opacity: 1;
  transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  padding-top: 2rem;
  padding-bottom: 32px;
  background: #FFF;
  outline: 0;
  min-width: 100%;
  max-width: none;
  min-height: 100%;
  margin: 0;
  border-radius: 0;
}
.root:focus::after {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 0;
  border-color: #010205;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.content {
  padding: 0 32px;
}
.controls {
  position: absolute;
  top: 8px;
  right: 8px;
  left: 8px;
  display: flex;
  justify-content: flex-end;
  z-index: 1;
}
.dismiss {
  border: 2px solid #FFF;
  border-radius: 4px;
  background: #FFF;
}
@media(min-width:480px) {
  .root {
    min-width: 276px;
    max-width: 1535.5px;
    min-height: auto;
    margin: clamp(16px, 7vh, 192px) max(22px, 10.625vw - 12px);
    border-radius: 8px;
  }
  .root:focus::after {
    border-radius: 12px;
    border-color: #FBFCFF;
    top: -4px;
    left: -4px;
    right: -4px;
    bottom: -4px;
  }
}

@media(min-width:760px) {
  .root {
    min-width: 100%;
    max-width: none;
    min-height: 100%;
    margin: 0;
    border-radius: 0;
  }
  .root:focus::after {
    border-radius: 0;
    border-color: #010205;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
  }
}

@media(min-width:1000px) {
  .root {
    min-width: 276px;
    max-width: 1535.5px;
    min-height: auto;
    margin: clamp(16px, 7vh, 192px) max(22px, 10.625vw - 12px);
    border-radius: 8px;
  }
  .root:focus::after {
    border-radius: 12px;
    border-color: #FBFCFF;
    top: -4px;
    left: -4px;
    right: -4px;
    bottom: -4px;
  }
}

@media(min-width:1300px) {
  .root {
    min-width: 100%;
    max-width: none;
    min-height: 100%;
    margin: 0;
    border-radius: 0;
  }
  .root:focus::after {
    border-radius: 0;
    border-color: #010205;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
  }
}

@media(min-width:1760px) {
  .root {
    margin: clamp(16px, 7vh, 192px) max(22px, 10.625vw - 12px);
    min-width: 276px;
    max-width: 1535.5px;
    min-height: auto;
    border-radius: 8px;
  }
  .root:focus::after {
    border-radius: 12px;
    border-color: #FBFCFF;
    top: -4px;
    left: -4px;
    right: -4px;
    bottom: -4px;
  }
}

@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: true, fullscreen: false, dismissButton: false, hasHeader: false, hasFooter: true and theme: light 1`] = `
":host {
  overflow-y: auto;
  color-scheme: light dark !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  visibility: inherit !important;
  pointer-events: auto !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  background: rgba(1, 2, 5, 0.67) !important;
  transition: background var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0s) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-top: -32px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 8px 8px 0 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 0 8px 8px !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.scroll-container {
  display: flex;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  overflow-y: inherit;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}
.root {
  color: #010205;
  position: relative;
  box-sizing: border-box;
  transform: translateY(0%);
  opacity: 1;
  transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  padding-top: 32px;
  background: #FFF;
  outline: 0;
  min-width: 276px;
  max-width: 1535.5px;
  min-height: auto;
  margin: clamp(16px, 7vh, 192px) max(22px, 10.625vw - 12px);
  border-radius: 8px;
}
.root:focus::after {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 12px;
  border-color: #FBFCFF;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.content {
  position: relative;
  z-index: 0;
  padding: 0 32px;
}
.footer {
  position: sticky;
  background: #FFF;
  padding: 32px;
  bottom: 0;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
}
.footer--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0 -5px 10px;
  clip-path: inset(-20px 0 0 0);
}
@media(min-width:1760px) {
  .root {
    margin: min(192px, 10vh) max(22px, 10.625vw - 12px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: true, fullscreen: false, dismissButton: false, hasHeader: true, hasFooter: false and theme: dark 1`] = `
":host {
  overflow-y: auto;
  color-scheme: light dark !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  visibility: inherit !important;
  pointer-events: auto !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  background: rgba(38, 38, 41, 0.67) !important;
  transition: background var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0s) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 8px 8px 0 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 0 8px 8px !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
.scroll-container {
  display: flex;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  overflow-y: inherit;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}
.root {
  color: #FBFCFF;
  position: relative;
  box-sizing: border-box;
  transform: translateY(0%);
  opacity: 1;
  transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  padding-top: 32px;
  padding-bottom: 32px;
  background: #0E0E12;
  outline: 0;
  min-width: 276px;
  max-width: 1535.5px;
  min-height: auto;
  margin: clamp(16px, 7vh, 192px) max(22px, 10.625vw - 12px);
  border-radius: 8px;
}
.root:focus::after {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 12px;
  border-color: #FBFCFF;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.header {
  padding: 0 32px 8px;
}
.content {
  padding: 0 32px;
}
@media(min-width:1760px) {
  .root {
    margin: min(192px, 10vh) max(22px, 10.625vw - 12px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: true, fullscreen: false, dismissButton: false, hasHeader: true, hasFooter: true and theme: dark 1`] = `
":host {
  overflow-y: auto;
  color-scheme: light dark !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  visibility: inherit !important;
  pointer-events: auto !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  background: rgba(38, 38, 41, 0.67) !important;
  transition: background var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0s) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 8px 8px 0 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 0 8px 8px !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
.scroll-container {
  display: flex;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  overflow-y: inherit;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}
.root {
  color: #FBFCFF;
  position: relative;
  box-sizing: border-box;
  transform: translateY(0%);
  opacity: 1;
  transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  padding-top: 32px;
  background: #0E0E12;
  outline: 0;
  min-width: 276px;
  max-width: 1535.5px;
  min-height: auto;
  margin: clamp(16px, 7vh, 192px) max(22px, 10.625vw - 12px);
  border-radius: 8px;
}
.root:focus::after {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 12px;
  border-color: #FBFCFF;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.header {
  padding: 0 32px 8px;
}
.content {
  position: relative;
  z-index: 0;
  padding: 0 32px;
}
.footer {
  position: sticky;
  background: #0E0E12;
  padding: 32px;
  bottom: 0;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
}
.footer--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0 -5px 10px;
  clip-path: inset(-20px 0 0 0);
}
@media(min-width:1760px) {
  .root {
    margin: min(192px, 10vh) max(22px, 10.625vw - 12px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: true, fullscreen: false, dismissButton: true, hasHeader: false, hasFooter: false and theme: dark 1`] = `
":host {
  overflow-y: auto;
  color-scheme: light dark !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  visibility: inherit !important;
  pointer-events: auto !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  background: rgba(38, 38, 41, 0.67) !important;
  transition: background var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0s) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-top: -2rem !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 8px 8px 0 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 0 8px 8px !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
.scroll-container {
  display: flex;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  overflow-y: inherit;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}
.root {
  color: #FBFCFF;
  position: relative;
  box-sizing: border-box;
  transform: translateY(0%);
  opacity: 1;
  transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  padding-top: 2rem;
  padding-bottom: 32px;
  background: #0E0E12;
  outline: 0;
  min-width: 276px;
  max-width: 1535.5px;
  min-height: auto;
  margin: clamp(16px, 7vh, 192px) max(22px, 10.625vw - 12px);
  border-radius: 8px;
}
.root:focus::after {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 12px;
  border-color: #FBFCFF;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.content {
  padding: 0 32px;
}
.controls {
  position: absolute;
  top: 8px;
  right: 8px;
  left: 8px;
  display: flex;
  justify-content: flex-end;
  z-index: 1;
}
.dismiss {
  border: 2px solid #0E0E12;
  border-radius: 4px;
  background: #0E0E12;
}
@media(min-width:1760px) {
  .root {
    margin: min(192px, 10vh) max(22px, 10.625vw - 12px);
  }
}

@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: true, fullscreen: false, dismissButton: true, hasHeader: true, hasFooter: false and theme: light 1`] = `
":host {
  overflow-y: auto;
  color-scheme: light dark !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  visibility: inherit !important;
  pointer-events: auto !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  background: rgba(1, 2, 5, 0.67) !important;
  transition: background var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0s) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 8px 8px 0 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 0 8px 8px !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.scroll-container {
  display: flex;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  overflow-y: inherit;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}
.root {
  color: #010205;
  position: relative;
  box-sizing: border-box;
  transform: translateY(0%);
  opacity: 1;
  transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  padding-top: 2rem;
  padding-bottom: 32px;
  background: #FFF;
  outline: 0;
  min-width: 276px;
  max-width: 1535.5px;
  min-height: auto;
  margin: clamp(16px, 7vh, 192px) max(22px, 10.625vw - 12px);
  border-radius: 8px;
}
.root:focus::after {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 12px;
  border-color: #FBFCFF;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.header {
  padding: 0 32px 8px;
}
.content {
  padding: 0 32px;
}
.controls {
  position: absolute;
  top: 8px;
  right: 8px;
  left: 8px;
  display: flex;
  justify-content: flex-end;
  z-index: 1;
}
.dismiss {
  border: 2px solid #FFF;
  border-radius: 4px;
  background: #FFF;
}
@media(min-width:1760px) {
  .root {
    margin: min(192px, 10vh) max(22px, 10.625vw - 12px);
  }
}

@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: true, fullscreen: true, dismissButton: false, hasHeader: false, hasFooter: false and theme: dark 1`] = `
":host {
  overflow-y: auto;
  color-scheme: light dark !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  visibility: inherit !important;
  pointer-events: auto !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  background: rgba(38, 38, 41, 0.67) !important;
  transition: background var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0s) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-top: -32px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
.scroll-container {
  display: flex;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  overflow-y: inherit;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}
.root {
  color: #FBFCFF;
  position: relative;
  box-sizing: border-box;
  transform: translateY(0%);
  opacity: 1;
  transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  padding-top: 32px;
  padding-bottom: 32px;
  background: #0E0E12;
  outline: 0;
  min-width: 100%;
  max-width: none;
  min-height: 100%;
  margin: 0;
  border-radius: 0;
}
.root:focus::after {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 0;
  border-color: #FBFCFF;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.content {
  padding: 0 32px;
}
@media(min-width:1760px) {
  .root {
    margin: 0;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: true, fullscreen: true, dismissButton: false, hasHeader: true, hasFooter: false and theme: light 1`] = `
":host {
  overflow-y: auto;
  color-scheme: light dark !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  visibility: inherit !important;
  pointer-events: auto !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  background: rgba(1, 2, 5, 0.67) !important;
  transition: background var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0s) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.scroll-container {
  display: flex;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  overflow-y: inherit;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}
.root {
  color: #010205;
  position: relative;
  box-sizing: border-box;
  transform: translateY(0%);
  opacity: 1;
  transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  padding-top: 32px;
  padding-bottom: 32px;
  background: #FFF;
  outline: 0;
  min-width: 100%;
  max-width: none;
  min-height: 100%;
  margin: 0;
  border-radius: 0;
}
.root:focus::after {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 0;
  border-color: #010205;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.header {
  padding: 0 32px 8px;
}
.content {
  padding: 0 32px;
}
@media(min-width:1760px) {
  .root {
    margin: 0;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: true, fullscreen: true, dismissButton: true, hasHeader: false, hasFooter: false and theme: light 1`] = `
":host {
  overflow-y: auto;
  color-scheme: light dark !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  visibility: inherit !important;
  pointer-events: auto !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  background: rgba(1, 2, 5, 0.67) !important;
  transition: background var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0s) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-top: -2rem !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.scroll-container {
  display: flex;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  overflow-y: inherit;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}
.root {
  color: #010205;
  position: relative;
  box-sizing: border-box;
  transform: translateY(0%);
  opacity: 1;
  transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  padding-top: 2rem;
  padding-bottom: 32px;
  background: #FFF;
  outline: 0;
  min-width: 100%;
  max-width: none;
  min-height: 100%;
  margin: 0;
  border-radius: 0;
}
.root:focus::after {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 0;
  border-color: #010205;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.content {
  padding: 0 32px;
}
.controls {
  position: absolute;
  top: 8px;
  right: 8px;
  left: 8px;
  display: flex;
  justify-content: flex-end;
  z-index: 1;
}
.dismiss {
  border: 2px solid #FFF;
  border-radius: 4px;
  background: #FFF;
}
@media(min-width:1760px) {
  .root {
    margin: 0;
  }
}

@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: true, fullscreen: true, dismissButton: true, hasHeader: true, hasFooter: false and theme: dark 1`] = `
":host {
  overflow-y: auto;
  color-scheme: light dark !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  visibility: inherit !important;
  pointer-events: auto !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  background: rgba(38, 38, 41, 0.67) !important;
  transition: background var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0s) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
.scroll-container {
  display: flex;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  overflow-y: inherit;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}
.root {
  color: #FBFCFF;
  position: relative;
  box-sizing: border-box;
  transform: translateY(0%);
  opacity: 1;
  transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  padding-top: 2rem;
  padding-bottom: 32px;
  background: #0E0E12;
  outline: 0;
  min-width: 100%;
  max-width: none;
  min-height: 100%;
  margin: 0;
  border-radius: 0;
}
.root:focus::after {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 0;
  border-color: #FBFCFF;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.header {
  padding: 0 32px 8px;
}
.content {
  padding: 0 32px;
}
.controls {
  position: absolute;
  top: 8px;
  right: 8px;
  left: 8px;
  display: flex;
  justify-content: flex-end;
  z-index: 1;
}
.dismiss {
  border: 2px solid #0E0E12;
  border-radius: 4px;
  background: #0E0E12;
}
@media(min-width:1760px) {
  .root {
    margin: 0;
  }
}

@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;
